Module export discovery handles jars with no manifest gracefully (#1954)